--- a/docs/pages/tutorials/view.pug
+++ b/docs/pages/tutorials/view.pug
@@ -33,9 +33,9 @@ block content
 	p
 		|  On the first look, this might look better than the current solution but there is a major problem with it.
 		|  The issue is that C++ passes arguments by copy. This means that line 10 would have had no effect since
-		|  a copy of the Layout with no widgets would be added to an Activity. This means that
+		|  a copy of the Layout with no widgets was already added to an Activity on line 9. Because of this
 		|  some objects in ardUI are handled using their pointers for best flexibility so that you can do things
-		|  in the order you like best. If you are not very familiar
+		|  in any order you like. If you are not very familiar
 		|  with pointers, all you need to know is that you should use a #[code new] keyword when creating Views and
 		|  use an arrow (#[code ->]) operator instead of a dot (#[code .]) to access View's methods and fields.
 	p
@@ -80,11 +80,8 @@ block content
 		|  #[code ardUI::getViewByName()]. If you need to access another View in your callback, you can first save your
 		|  View and then get it by name like this:
 	+code(`
-		auto t = new TextView();
-		auto b = new ButtonView();
-
-		t->setText("Hello");
-		b->setText("Press me!");
+		auto t = new TextView("Hello");
+		auto b = new ButtonView("Press me!");
 
 		ardUI::setViewName(t, "text");
 
@@ -94,7 +91,7 @@ block content
 		});
 	`)
 	p
-		|  Notice the type casting on line 10. This function will return a pointer to a View object so you may need to
+		|  Notice the type casting on line 7. This function will return a pointer to a View object so you may need to
 		|  cast it down to the appropriate type to use fields and methods specific to that widget, like
 		|  #[code setText()] in this example.
 	script(async src='/js/referencer.js')
