--- a/docs/pages/tutorials/quickstart.pug
+++ b/docs/pages/tutorials/quickstart.pug
@@ -1,6 +1,7 @@
 extends ../../templates/tabbed
 include ../../templates/mixins/code
 include ../../templates/mixins/tips
+include ../../templates/mixins/toc
 
 
 block nav
@@ -8,7 +9,8 @@ block nav
 
 
 block content
-	h1(data-anchor='Getting started') Getting started with ardUI
+	+toc('Getting started')
+		h1() Getting started with ardUI
 	+tip('A note about code examples', 'info')
 		span All code examples on this site are written in .cpp format instead of .ino used in Arduino
 			|  for better compatibility. Code in the .cpp format will run in Arduino IDE as well.
@@ -25,7 +27,8 @@ block content
 	`)
 	p This might not look like much, but this is actually a functional ardUI program! This is because ardUI starts
 		|  working the moment you include it so you don't have to worry about calling it yourself.
-	p(data-anchor='Drawing elements') Okay, let's actually draw something now:
+	+toc('Drawing elements')
+		p() Okay, let's actually draw something now:
 	+code(`
 		#include <Arduino.h>
 		#include "ardUI.h"
