--- a/docs/pages/tutorials/view.pug
+++ b/docs/pages/tutorials/view.pug
@@ -1,5 +1,6 @@
 extends ../../templates/tabbed
 include ../../templates/mixins/code
+include ../../templates/mixins/toc
 
 
 block nav
@@ -7,12 +8,14 @@ block nav
 
 
 block content
-	h1(data-anchor='View basics') View basics
+	+toc('View basics')
+		h1() View basics
 	p
 		|  A View is a single widget you can place on your screen. As mentioned before in
 		|  #[a(href='/pages/tutorials/view_tree') view tree article], a single Activity can store an unlimited number
 		|  of Views by making use of different Layouts. Let's take a look at one of the most important ardUI concepts.
-	h2(data-anchor='Pointers and memory') Pointers and memory management
+	+toc('Pointers and memory')
+		h2() Pointers and memory management
 	p
 		|  From the previous examples you may have noticed that the Views in ardUI are usually handled by their pointers.
 		|  This is intentional and it is important to understand why it's done. Consider this example:
@@ -44,7 +47,8 @@ block content
 		|  longer needed. In other words, it will delete all Views added to a view tree once their containing Activity
 		|  is closed. However, you are still responsible for deleting everything not added to the view tree or any other
 		|  objects ardUI cannot handle.
-	h2(data-anchor='Event callbacks') Event functions and callbacks
+	+toc('Event callbacks')
+		h2() Event functions and callbacks
 	p
 		|  If you have ever tried to make user interfaces yourself, you might agree that the one of the
 		|  most annoying things is constantly monitoring touchscreen input to make your buttons work as expected.
