--- a/docs/pages/tutorials/activity.pug
+++ b/docs/pages/tutorials/activity.pug
@@ -1,5 +1,6 @@
 extends ../../templates/tabbed
 include ../../templates/mixins/code
+include ../../templates/mixins/toc
 
 
 block nav
@@ -7,7 +8,8 @@ block nav
 
 
 block content
-	h1(data-anchor='Activity basics') Activity basics
+	+toc('Activity basics')
+		h1 Activity basics
 	p
 		|  An Activity in ardUI is a single screen you can place widgets on. To create your own Activity, create a new
 		|  Activity class as follows: #[code class MyActivity: public Activity {...};]. Let's look at this declaration
@@ -20,15 +22,17 @@ block content
 		|  required method in an Activity is #[code onCreate()]. This is the first function called before your
 		|  Activity becomes visible. This is also a good place to create and place all widgets your Activity will need.
 		|  Here is the chart of the entire Activity lifecycle:
-	img(src='/img/activity_lifecycle.png' alt='Activity lifecycle diagram' data-anchor='Lifecycle diagram')
+	+toc('Lifecycle diagram')
+		img(src='/img/activity_lifecycle.png' alt='Activity lifecycle diagram')
 	p
 		|  This diagram may look quite complicated at first but you don't have to implement any functions other than
 		|  #[code onCreate()]. However, you might also want to take a look at the #[code onDestroy()] among others.
 		|  This is the function ardUI will call before deleting your Activity. This is the last chance for you to release
 		|  any resources you are using in your Activity and free all memory you have allocated for it. Otherwise, it might
 		|  result in a memory leak. Read more about memory management in ardUI
-		|  #[a(href='/pages/tutorials/memory_management') here].
-	h1(data-anchor='Switching Activities') Switching between Activities
+		|  #[a(href='/pages/tutorials/view#Pointers_and_memory') here].
+	+toc('Switching Activities')
+		h1 Switching between Activities
 	p
 		|  You can open an Activity by calling #[code startActivity()] or #[code startActivityForResult()]. In both cases,
 		|  you may also pass an optional Bundle containing some data you'd like to pass to your new Activity. If you want to
