--- a/docs/pages/tutorials/installation.pug
+++ b/docs/pages/tutorials/installation.pug
@@ -1,4 +1,5 @@
 extends ../../templates/tabbed
+include ../../templates/mixins/toc
 
 
 block nav
@@ -6,7 +7,8 @@ block nav
 
 
 block content
-	h1(data-anchor='Installation') Installing ardUI
+	+toc('Installation')
+		h1() Installing ardUI
 	p
 		|  Installing ardUI was made to be as easy as possible. To start using ardUI just download the latest version
 		|  of the framework from the repository. If you are using the Arduino IDE, then you can import the archive
