improved website navigation

--- a/docs/pages/index.pug
+++ b/docs/pages/index.pug
@@ -1,9 +1,13 @@
 extends ../templates/tabbed
 
 
-block content
+block tab-content
 	h1 Welcome to ardUI!
-
+	p
+		|  ardUI is a C++ framework that makes creating complex and interactive user interfaces easy and fast!
 
 block nav
 	a(href='/pages/tutorials') Tutorials
+	a(href='/pages/guides') Guides
+	a(href='/pages/reference') Reference
+
