--- a/docs/pages/tutorials/activity.pug
+++ b/docs/pages/tutorials/activity.pug
@@ -7,7 +7,7 @@ block nav
 	include ../../templates/nav-tutorials
 
 
-block content
+block tab-content
 	+toc('Activity basics')
 		h1 Activity basics
 	p
