--- a/docs/pages/tutorials/custom_views.pug
+++ b/docs/pages/tutorials/custom_views.pug
@@ -7,9 +7,9 @@ block nav
 	include ../../templates/nav-tutorials
 
 
-block content
+block tab-content
 	+toc('Custom Views')
-		h1() Making custom Views
+		h1 Making custom Views
 	p
 		|  One of the most important features of ardUI is extensibility. You are never limited by the set of widget
 		|  ardUI provides out of the box because you can always implement your own widgets to suit
