--- a/docs/pages/tutorials/display_interface.pug
+++ b/docs/pages/tutorials/display_interface.pug
@@ -7,9 +7,9 @@ block nav
 	include ../../templates/nav-tutorials
 
 
-block content
+block tab-content
 	+toc('Display interface')
-		h1() Display interface
+		h1 Display interface
 	p
 		|  In order to work on every display, ardUI needs to know how to talk to that specific display, but how does
 		|  ardUI know how to do that?
@@ -20,7 +20,7 @@ block content
 		|  for Low-Level Programming Interface) and complete the functions there to work with your display.
 		|  Once that is done, ardUI will work with your exact display.
 	+toc('Completing the interface')
-		h2() Completing the interface
+		h2 Completing the interface
 	p
 		|  ardUI architecture can be visualized like this, where your application is on the very top and your hardware
 		|  on the bottom:
