--- a/docs/pages/tutorials/index.pug
+++ b/docs/pages/tutorials/index.pug
@@ -6,8 +6,10 @@ block nav
 	include ../../templates/nav-tutorials
 
 
-//- TODO: add basic info and links to reference and tutorials
-block content
+block tab-content
 	+toc('Welcome')
-		h1() Welcome to ardUI tutorials!
-	p Use the panel on the left to choose the article you want to read
+		h1 Welcome to ardUI tutorials!
+	p
+		|  Here you will find short articles to help you get started with ardUI and understand the basic principles
+		|  behind the framework and developing user interfaces in general. To get started, choose a tutorial on the
+		|  left and start creating right away!
