--- a/docs/pages/tutorials/quickstart.pug
+++ b/docs/pages/tutorials/quickstart.pug
@@ -8,9 +8,9 @@ block nav
 	include ../../templates/nav-tutorials
 
 
-block content
+block tab-content
 	+toc('Getting started')
-		h1() Getting started with ardUI
+		h1 Getting started with ardUI
 	+tip('A note about code examples', 'info')
 		span All code examples on this site are written in .cpp format instead of .ino used in Arduino
 			|  for better compatibility. Code in the .cpp format will run in Arduino IDE as well.
@@ -28,7 +28,7 @@ block content
 	p This might not look like much, but this is actually a functional ardUI program! This is because ardUI starts
 		|  working the moment you include it so you don't have to worry about calling it yourself.
 	+toc('Drawing elements')
-		p() Okay, let's actually draw something now:
+		p Okay, let's actually draw something now:
 	+code(`
 		#include <Arduino.h>
 		#include "ardUI.h"
