--- a/docs/pages/tutorials/view_tree.pug
+++ b/docs/pages/tutorials/view_tree.pug
@@ -7,9 +7,9 @@ block nav
 	include ../../templates/nav-tutorials
 
 
-block content
+block tab-content
 	+toc('View tree')
-		h1() Introduction to View tree
+		h1 Introduction to View tree
 	p
 		|  View tree in ardUI is a collection of objects that describes all Views added to a particular Activity.
 		|  Consider this simple Activity with a title text and three buttons:
