--- a/docs/style/style.styl
+++ b/docs/style/style.styl
@@ -62,6 +62,13 @@ html
 				filter invert(1)
 
 		main
+			flex-grow 1
+
+			#content
+				max-width 768px
+				padding 0 2em
+				margin 1em auto
+
 			#tab-layout
 				display flex
 				flex-flow row nowrap
