--- a/docs/templates/nav-tutorials.pug
+++ b/docs/templates/nav-tutorials.pug
@@ -9,5 +9,4 @@ a(href='/pages/tutorials/activity') Activity basics
 a(href='/pages/tutorials/view') View basics
 h5 Extending ardUI
 a(href='/pages/tutorials/custom_views') Custom views
-h5 Advanced concepts
-a(href='/pages/tutorials/porting') Porting guide
+p.text-secondary More tutorials coming soon!
