--- a/docs/pages/tutorials/installation.pug
+++ b/docs/pages/tutorials/installation.pug
@@ -6,9 +6,9 @@ block nav
 	include ../../templates/nav-tutorials
 
 
-block content
+block tab-content
 	+toc('Installation')
-		h1() Installing ardUI
+		h1 Installing ardUI
 	p
 		|  Installing ardUI was made to be as easy as possible. To start using ardUI just download the latest version
 		|  of the framework from the repository. If you are using the Arduino IDE, then you can import the archive
