--- a/docs/templates/tabbed.pug
+++ b/docs/templates/tabbed.pug
@@ -8,7 +8,7 @@ block main
 			div#nav-container
 				block nav
 		article#content-tab
-			block content
+			block tab-content
 		div#toc-tab.tab
 			h3.tab-title On this page
 			div#toc-container
