--- a/Builder/style/stylify.styl
+++ b/Builder/style/stylify.styl
@@ -470,7 +470,7 @@ html
 					margin-left 0
 
 				&[type=email], &[type=password], &[type=number]
-				&[type=search], &[type=text], &[type=email],
+				&[type=search], &[type=text], &[type=email]
 					display block
 					width 100%
 					padding .7em
