--- a/Builder/style/style.styl
+++ b/Builder/style/style.styl
@@ -117,6 +117,10 @@ html
 
 		div#splash
 			card()
+			display flex
+			flex-flow column nowrap
+			justify-content flex-start
+			align-content center
 			position fixed
 			left 0
 			top 0
